--- a/chapter05.Rmd
+++ b/chapter05.Rmd
@@ -17,7 +17,6 @@ knitr::opts_chunk$set(
 ```
 
 
-
 ```{r, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(brms)
@@ -26,10 +25,15 @@ library(rstan)
 library(patchwork)
 ```
 
-# Section 5.1: 虚假关联
+
+WaffleHouses
+是一种卖华夫饼的连锁店，类似肯德基。华夫饼店24小时营业，店里一般都备有发电机，因此即使在飓风之后也会营业。所以，人们把华夫饼屋视为灾难严重性的一种指示，如果它都关门了，那说明真的很严重灾难了。
 
 
-WaffleHouses 是一种卖华夫饼的连锁店，类似肯德基
+我们今天研究的不是饼屋开不开门的问题，而是它与离婚率的关系。
+因为人们发现，离婚率高的地方，人均华夫饼店的数量就越高，相反，离婚率低的地方，没有华夫饼店。
+（这是什么饼，吃了会导致婚姻危机？）
+
 ```{r}
 d <- readr::read_csv(here::here("data", "WaffleDivorce.csv"))
 ```
@@ -43,9 +47,11 @@ d <- d %>%
 glimpse(d)
 ```
 
-华夫饼屋与人口数量的比例，与当地离婚率的关联。通过图，我们看不出他们之间的关联
-```{r}
+人均饼屋数量（华夫饼屋与人口数量的比例）与当地离婚率的关联。通过图，我们看不出他们之间的关联
+```{r, fig.width = 3, fig.height = 3, message = F}
+# install.packages("ggrepel", depencencies = T)
 library(ggrepel)
+
 d %>% 
   ggplot(aes(x = WaffleHouses / Population, y = Divorce)) +
   geom_point() +
@@ -54,5 +60,112 @@ d %>%
                   size = 3, seed = 1024) +
   geom_smooth(method = "lm", level = 0.89, fullrange = T) +
   scale_x_continuous(limits = c(0, 50)) +
-  labs(x = "Waffle Houses per million", y = "Divorce Rate")
+  labs(x = "Waffle Houses per million", y = "Divorce Rate") +
+  theme_bw() +
+  theme(
+    panel.grid = element_blank()
+  )
 ```
+
+很显然，这是一种虚假的关联。因为常理下不太可能吃饼会导致婚姻危机。但是我们可能会想，是哪个（哪些）变量导致了虚假关联？ 事实上，华夫饼屋1955年在南美地区兴起发展的，但离婚任何地方都有只是南美地区离婚率较高，很可能是某个原因让这两件事情同时发生了。
+
+这称之为关联事件，但彼此不构成因果关系。**关联不等于因果**
+
+一般情况下，会做多元回归模型，原因如下：
+
+- 减少混淆，这里饼屋与离婚率就是一种混淆，它会隐藏真正重要的原因
+- 可能是多个或者复杂的原因。一个现象可能是多个原因同时引起，所以需要把多个因素放在一起同时测量
+- 交互作用。一个变量要依赖另一个变量起作用，比如植物生成需要光和水，只有光不行，只有水也不行。
+
+下面通过最简单的线性回归模型揭示：
+- 饼屋与离婚率之间的虚假关联
+- 被隐藏的关联
+
+
+# Section 5.1: 虚假关联
+
+先把饼屋的事情放一边，我们先看看结婚率和离婚率之间的关联。
+
+### stan code 
+
+```{r, warning=FALSE, message=FALSE}
+stan_program <- '
+data {
+  int<lower=1> n;            // number of observations
+  int<lower=1> K;            // number of regressors (including constant)
+  vector[n] Divorce;         // outcome
+  matrix[n, K] X;            // regressors
+}
+parameters {
+  real<lower=0,upper=50> sigma;    // scale
+  vector[K] b;                     // coefficients (including constant)
+}
+transformed parameters {
+  vector[n] mu;                    // location
+  mu = X * b;
+}
+model {
+  Divorce ~ normal(mu, sigma);    // probability model
+  sigma ~ exponential(1);         // prior for scale
+  b[1] ~ normal(0, 0.2);          // prior for intercept
+  for (i in 2:K) {                // priors for coefficients
+    b[i] ~ normal(0, 0.5);
+  }
+}
+generated quantities {
+  vector[n] yhat;                 // predicted outcome
+  for (i in 1:n) yhat[i] = normal_rng(mu[i], sigma);
+}
+'
+
+stan_data <- d %>%
+  tidybayes::compose_data(
+    K = 2,
+    y = Divorce,
+    X = model.matrix(~Marriage, .)
+  )
+
+m5.1 <- stan(model_code = stan_program, data = stan_data)
+```
+
+
+### brms
+
+```{r b5.1}
+b5.1 <-
+  brm(
+    data = d,
+    family = gaussian,
+    Divorce ~ 1 + Marriage,
+    prior = c(
+      prior(normal(0, 0.2), class = Intercept),
+      prior(normal(0, 0.5), class = b),
+      prior(exponential(1), class = sigma)
+    ),
+    iter = 2000, warmup = 1000, chains = 4, cores = 4,
+    seed = 5,
+    sample_prior = T,
+    file = "fits/b05.01"
+  )
+```
+
+
+
+
+
+我们看到，左边这个张图显示结婚率越高离婚率越高，那问题来了，是结婚导致离婚？
+只有结婚了才能离婚，因为不结婚就不存在离婚，但两者不存在因果关系。相反，高结婚率意味对价值观、婚姻观有较高的认同度，往往导致离婚率降低。
+
+右图给出的是**该地结婚年龄的中位数**与**离婚率**的关系，应该说这个结婚年龄是离婚率的很好的因素（结婚年龄越大，离婚率越低），但这个也说不通，
+除非结婚年龄很晚，在离婚之前就去世了。
+
+数据是做了标准化处理的，
+所以$\beta = 1$, 意味着1个标准差的年龄波动引起1个标准差输出结果的波动。
+
+Normal(0, 0.5)  > 1 的概率是多大？
+
+```{r}
+ mean(rnorm(1000000, mean = 0, sd = 0.5) >1 )
+```
+
+书中给出结果是5%（我还需要再看）
